Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6147

sanity-lfsck test_4: '(7) unexpected status'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.7.0
    • None
    • None
    • 3
    • 17167

      This issue was created by maloo for John Hammond <john.hammond@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/7626441a-a14b-11e4-807a-5254006e85c2.

      The sub-test test_4 failed with the following error:

      (7) unexpected status
      

      Please provide additional information about the failure here.

      Info required for matching: sanity-lfsck 4

            yong.fan nasf (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: