lustre/osd-ldiskfs/osd_handler.c
@@ -5904,8 +5904,10 @@ static int osd_shutdown(const struct lu_env *env, struct osd_device *o)
 
 	/* shutdown quota slave instance associated with the device */
 	if (o->od_quota_slave != NULL) {
-		qsd_fini(env, o->od_quota_slave);
+		struct qsd_instance *qsd = o->od_quota_slave;
+
 		o->od_quota_slave = NULL;
+		qsd_fini(env, qsd);
 	}
 
 	osd_fid_fini(env, o);
